# farbenfroh

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  THIRD_PARTY_LICENSES.md  ozz_config.json  readme.md  resource.rc  set_ozz_tool_path.ps1  simple-king.rdbg
assets/: blocky_guy.blend  blocky_guy.blend1  blocky_guy.glb
assets/shaders/: base.frag  base_static_mesh.vert  frustum_debug.vert  fshader_diffuse_texture.glsl  fshader_diffuse_texture_instanced.glsl  fshader_diffuse_texture_unlit.glsl  fshader_single_color.glsl  fshader_single_color_skinned.glsl  fshader_sky.glsl  grid.frag  grid.vert  grid_postprocess.frag  grid_postprocess.vert  particle.frag  particle.vert  shadow_map.vert  sky.frag  sky.vert  smoke.frag  smoke.vert  sprite_vshader.glsl  textured_lit.vert  vshader.glsl  vshader_instanced.glsl  vshader_skinned.glsl  vshader_sky.glsl  world_pos.frag
assets/shaders/fx/: explosion.frag  explosion.vert  smoke.vert
assets/vulkan_shaders/: simple.comp  simple.vert
editor/: CMakeLists.txt
engine/: CMakeLists.txt
engine/animation/: CMakeLists.txt
engine/animation/include/: Joint.h  property_animation.h  skeletal_animation.h  skeleton.h
engine/animation/src/: Skeleton.cpp  property_animation.cpp
engine/asset_handling/: CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/include/: engine.h  symbol_exports.h
engine/gamestate/: CMakeLists.txt
engine/gamestate/include/: gamestate.h
engine/include/: engine.h  symbol_exports.h
engine/include/windowing/: win32_window.h
engine/input/: CMakeLists.txt
engine/input/include/: input.h
engine/input/src/: input_impl.cpp
engine/renderer/: CMakeLists.txt  readme.md
engine/renderer/common/: CMakeLists.txt
engine/renderer/common/include/: renderer.h
engine/renderer/common/src/: common_renderer_features.cpp
engine/renderer/include/: renderer.h
engine/renderer/opengl46/: CMakeLists.txt
engine/renderer/opengl46/include/: opengl46.h
engine/renderer/opengl46/src/: opengl46.cpp
engine/renderer/vulkan/: CMakeLists.txt
engine/renderer/vulkan/include/: vulkan_impl.h
engine/renderer/vulkan/src/: vulkan_impl.cpp
engine/scripting/lua/: CMakeLists.txt
engine/scripting/lua/include/: lua_parser.h
engine/scripting/lua/src/: lua_parser.cpp
engine/src/win/: win32_window.cpp
engine/util/: CMakeLists.txt
engine/util/include/: util.h
engine/util/src/: io.cpp  string_helpers.cpp  timer.cpp
engine/windowing/: CMakeLists.txt
engine/windowing/include/: win32_window.h
games/_game_template/: _game.cpp  _game.h
games/adventure/: adventure.cpp
games/car/: car.cpp  car_main.cpp  model_import.cpp  splash.cpp  splash.h
games/car/assets/: car.fbx  ground_plane.fbx  simple_car.blend  simple_car.blend1  simple_car.fbx  simple_car2.fbx  simple_car_diffuse.xcf  track.blend  track.blend1  track.fbx  xbox2.fbx
games/car/shaders/: basic.hlsl  unlit.hlsl
games/dungeon_shoot/: dungeon_shoot.h  dungeon_shoot_main.cpp
games/dungeon_shoot/assets/: hero.blend  hero.blend1  hero.fbx  hero2.blend  hero2.blend1  hero3.blend  hero3.blend1  hero3.glb  hero3_6.glb  house.fbx  house.mtl  imgui.ini  xbox.fbx
games/gameA/: CMakeLists.txt
games/gameA/levels/: player_movement.lua
games/gameA/src/: main.cpp
games/king1024/: BuildingGameplay.cpp  InsideShipState.cpp  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  king_game.h  physics.cpp  physics.h  readme.md
games/king1024/assets/: AS_Idle.FBX  AS_Idle.glb  SK_Man_King.FBX  SK_Man_King.glb  SM_Archery.FBX  SM_Barracks.FBX  SM_Blacksmith.FBX  SM_Farm.FBX  SM_Granary.FBX  SM_House.FBX  SM_Keep.FBX  SM_Library.FBX  SM_LumberMill.FBX  SM_MageTower.FBX  SM_Market.FBX  SM_Stables.FBX  SM_Temple.FBX  SM_Tower_A.FBX  SM_Tower_B.FBX  SM_Tower_C.FBX  SM_TownHall.FBX  SM_Wall_A_1x1.FBX  SM_Wall_A_corner.FBX  SM_Wall_A_door_A.FBX  SM_Wall_A_door_B.FBX  SM_Wall_A_gate.FBX  SM_Wall_A_wall.FBX  SM_Wall_B_1x1.FBX  anim10.glb  anim11.glb  anim6.blend  anim6.blend1  anim6.glb  anim7.glb  anim8.glb  anim9.blend  anim9.blend1  anim9.fbx  anim9.glb  castle_tiny_toony.glb  (+63 more)
games/mars_attack/: animation_editor.cpp  animation_editor.h  ingame_editor.cpp  ingame_editor.h  mars_main.cpp
games/multithread-king/: FirstPersonController.cpp  WallCollider.cpp  mtking.h
games/opengl/GameEditor/: AnimationEditor.cpp  AnimationEditor.h  EditorLauncher.cpp  EditorLauncher.h  GameEditor.cpp
games/opengl/server_viz/: ServerViz.cpp  ServerViz.h  readme.md
games/opengl/test_terrain/: AnimationEditor.cpp  AnimationEditor.h  EnemyBulletPool.h  EnemyExplosionComponent.cpp  EnemyExplosionComponent.h  EnemyHitManager.cpp  EnemyHitManager.h  GameplayLevel.cpp  GameplayLevel.h  LevelEditor.h  PlayerBulletComp.cpp  PlayerBulletComp.h  PlayerBulletPool.cpp  PlayerBulletPool.h  PlayerShooting.cpp  TestTerrainGame.cpp
games/opengl/testgame1/: GamePlayLevel.cpp  GamePlayLevel.h  MainMenuLevel.cpp  MainMenuLevel.h  TestGame1.h  (+1 more)
games/simple_king/: king_main.cpp  simple_king.h
games/software_rendered_king/: SoftwareRenderedGame.cpp  SoftwareRenderedGame.h
games/topdown_mover/: TopDownGame.cpp  TopDownGame.h  readme.md
sample-games/: CMakeLists.txt
sample-games/gameA/: CMakeLists.txt
src/: game-build.cpp  graphics.cpp  graphics.h  imgui-build.cpp  unity.cpp  windows.cpp
src/engine/: Light.cpp  Light.h  scene_editor_readme.md
src/game_editor_floating/: d2d_ui.h  editor_data.h  fonts.cpp  game_editor_floating.cpp  game_object_tree.cpp  new_game_dialog.cpp  paint_2d.cpp  paint_2d.h  startup_splash.cpp
src/game_editor_qt/: AssetBrowserWidget.cpp  AssetBrowserWidget.h  D3DViewPortWidget.cpp  D3DViewPortWidget.h  EditorController.cpp  EditorController.h  GameObjectPropertiesWidget.cpp  GameObjectPropertiesWidget.h  GameObjectTreeWidget.cpp  GameObjectTreeWidget.h  ProjectDash.cpp  ProjectDash.h  editor_model.h  main.cpp  sample_project.json
src/opengl/: wglext.h
v2025/: CMakeLists_0.txt  app.manifest  build.bat
v2025/assets/: blocky_soldier.blend  blocky_soldier.blend1  cube.glb  font_mesh.blend
v2025/src/: graphics.cpp  windows.cpp
(+591 files in other folders)
